# Bundeswehrbung

./: .gitignore  DieRekrutenFolge 03.csv  DieRekrutenFolge02.csv  DieRekrutenFolge04.csv  Dockerfile  LICENSE  README.md  docker_entry.sh  manage.py  pyproject.toml  style.css
.github/workflows/: docker.yml
bundeswehrbung/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: count-words.py  wordNumber.txt
scripts/speakingTime/: 01.csv  (+31 more)
static/: style.css
templates/: base.html  data.html  impressum.html  index.html  search_results.html  style.css
transcript/: Die Rekruten Folge 8.csv  DieRekrutenFolge01.csv  DieRekrutenFolge02.csv  DieRekrutenFolge03.csv  DieRekrutenFolge04.csv  DieRekrutenFolge05.csv  DieRekrutenFolge06.csv  DieRekrutenFolge07.csv  DieRekrutenFolge08.csv  DieRekrutenFolge09.csv  DieRekrutenFolge10.csv  DieRekrutenFolge11.csv  DieRekrutenFolge12.csv  DieRekrutenFolge13.csv  DieRekrutenFolge14.csv  DieRekrutenFolge15.csv  DieRekrutenFolge16.csv  DieRekrutenFolge17.csv  DieRekrutenFolge18.csv  DieRekrutenFolge19.csv  DieRekrutenFolge20.csv  DieRekrutenFolge21.csv  DieRekrutenFolge22.csv  DieRekrutenFolge23.csv  DieRekrutenFolge24.csv  DieRekrutenFolge25.csv  DieRekrutenFolge26.csv  DieRekrutenFolge27.csv  DieRekrutenFolge28.csv  DieRekrutenFolge29.csv  DieRekrutenFolge30.csv  DieRekrutenFolge31.csv  DieRekrutenFolge32.csv  DieRekrutenFolge33.csv  DieRekrutenFolge34.csv  DieRekrutenFolge35.csv  DieRekrutenFolge36.csv  DieRekrutenFolge37.csv  DieRekrutenFolge38.csv  DieRekrutenFolge39.csv  (+29 more)
wordsearch/: admin.py  apps.py  models.py  urls.py  views.py
(+29 files in other folders)
