[tool.poetry]
name = "bundeswehrbung"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"
whitenoise = "^6.4.0"
sentry-sdk = {extras = ["django"], version = "^1.28.1"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
